# avim_bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  avim_bot.kdev4
.kdev4/: avim_bot.kdev4
avproto_3rd/: CMakeLists.txt
avproto_3rd/include/: bot_api.hpp  bot_server.hpp  logging.hpp
avproto_3rd/src/: bot_ca.cpp
include/: avim.hpp  avproto_wrapper.hpp  bot_api.hpp  bot_avproto.hpp  bot_ca.hpp  bot_client.hpp  bot_connection.hpp  bot_group.hpp  bot_server.hpp  bot_service.hpp  connection.hpp  logging.hpp
libavproto/: CMakeLists.txt
libavproto/include/: avif.hpp  avjackif.hpp  avproto.hpp  message.hpp  serialization.hpp
libavproto/src/: async_coro_queue.hpp  avif.cpp  avjackif.cpp  avkernel.cpp  root_ca.cpp  serialization.cpp
libavproto_3rd/include/: bot_ca.hpp  bot_socket.hpp  message.hpp  serialization.hpp
libavproto_3rd/src/: bot_api.cpp  bot_group.cpp  bot_server.cpp  bot_socket.cpp  connection.cpp  server_bot.cpp
res/: setup.ini
src/: CMakeLists.txt  avim.cpp  avproto_wrapper.cpp  bot_api.cpp  bot_ca.cpp  bot_client.cpp  bot_connection.cpp  bot_group.cpp  bot_server.cpp  bot_socket.cpp  group_bot.cpp  group_service.cpp  main.cpp  message.cpp  proto_api.cpp  proto_wrapper.cpp  server_bot.cpp  service_group.cpp  service_route.cpp
